--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -6,16 +6,21 @@ header {
 	left: 32px;
 	line-height: 1.1;
 	position: absolute;
-	margin: 0;
 	cursor: pointer;
 	color: white;
 	mix-blend-mode: exclusion;
 	z-index: 55;
-	@media (max-width: 768px) {
+
+	@media (max-width: 1024px) {
 		top: 20px;
 		left: 20px;
 		z-index: 9999;
 	}
+	// @media (max-width: 768px) {
+	// 	top: 20px;
+	// 	left: 20px;
+	// 	z-index: 9999;
+	// }
 }
 
 .header-title {
