--- a/src/components/LandingPage/styles.scss
+++ b/src/components/LandingPage/styles.scss
@@ -9,8 +9,10 @@
 	.blur-container {
 		width: 100vw;
 		height: 100vh;
-		-webkit-backdrop-filter: blur(300px);
-		backdrop-filter: blur(300px);
+		// -webkit-backdrop-filter: blur(300px);
+		// backdrop-filter: blur(300px);
+		-webkit-backdrop-filter: blur(120px);
+		backdrop-filter: blur(120px);
 		z-index: 20;
 		position: absolute;
 		top: 0;
@@ -28,14 +30,12 @@
 	h2 {
 		font-weight: 400;
 		line-height: 1.3;
-		margin: 0;
 		text-align: right;
 	}
 
-	@media (max-width: 768px) {
+	@media (max-width: 1024px) {
 		bottom: 20px;
 		right: 20px;
-
 		max-width: 350px;
 	}
 }
