--- a/src/components/Menu/styles.scss
+++ b/src/components/Menu/styles.scss
@@ -3,6 +3,8 @@
 	background-color: var(--default-color);
 	height: 100vh;
 	position: fixed;
+	display: flex;
+	flex-direction: column;
 	pointer-events: none;
 	z-index: 50;
 	top: 0;
@@ -23,16 +25,12 @@
 			border-bottom: 2px solid black;
 		}
 
-		@media (max-width: 768px) {
+		@media (max-width: 1024px) {
 			top: 20px;
 			right: 20px;
 			font-size: 1.3rem;
 		}
 	}
-	// @media (max-width: 768px) {
-	// 	transform: translateY(100%);
-	// 	width: 100vw;
-	// }
 	@media (max-width: 768px) {
 		width: 100vw;
 	}
@@ -40,11 +38,6 @@
 .open {
 	transform: translateX(0);
 	pointer-events: auto;
-
-	// @media (max-width: 768px) {
-	// 	width: 100vw;
-	// 	transform: translateY(0);
-	// }
 }
 
 .main-navigation__blurred-background {
@@ -70,33 +63,42 @@
 
 .main-navigation__contact--container {
 	width: 100%;
-	height: 14rem;
-	@media (max-width: 768px) {
-		height: 10rem;
+	padding-top: 14rem;
+	@media (max-width: 1024px) {
+		padding-top: 11rem;
+	}
+	@media (max-width: 870px) {
+		padding-top: 9rem;
 	}
 }
 
+.test_nav {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+	overflow: hidden;
+	padding-bottom: 25px;
+}
 .main-navigation__nav {
+	overflow-y: auto;
 	width: 100%;
 	padding: 0 35px;
-	max-height: 75vh;
-	overflow-y: auto;
 	display: grid;
 	grid-template-columns: auto 3fr;
-	// -webkit-mask-image: linear-gradient(
-	// 	to bottom,
-	// 	rgba(0, 0, 0, 0) 0%,
-	// 	rgba(0, 0, 0, 1) 5%,
-	// 	rgba(0, 0, 0, 1) 90%,
-	// 	rgba(0, 0, 0, 0) 100%
-	// );
-	// mask-image: linear-gradient(
-	// 	to bottom,
-	// 	rgba(0, 0, 0, 0) 0%,
-	// 	rgba(0, 0, 0, 1) 5%,
-	// 	rgba(0, 0, 0, 1) 90%,
-	// 	rgba(0, 0, 0, 0) 100%
-	// );
+	-webkit-mask-image: linear-gradient(
+		to bottom,
+		rgba(0, 0, 0, 0) 0%,
+		rgba(0, 0, 0, 1) 3%,
+		rgba(0, 0, 0, 1) 93%,
+		rgba(0, 0, 0, 0) 100%
+	);
+	mask-image: linear-gradient(
+		to bottom,
+		rgba(0, 0, 0, 0) 0%,
+		rgba(0, 0, 0, 1) 3%,
+		rgba(0, 0, 0, 1) 93%,
+		rgba(0, 0, 0, 0) 100%
+	);
 	li {
 		margin: 15px 0;
 		font-size: 20px;
@@ -108,16 +110,18 @@
 			}
 		}
 	}
+	@media (max-width: 1024px) {
+		padding: 0 20px;
+	}
 	@media (max-width: 768px) {
-		padding: 15px 20px;
-		margin: -15px 0;
+		padding: 0 15px;
 	}
 
 	.main-navigation__nav--year {
 		align-self: center;
 		padding-right: 35px;
 
-		@media (max-width: 768px) {
+		@media (max-width: 1024px) {
 			padding-right: 15px;
 		}
 	}
