--- a/src/components/Project/styles.scss
+++ b/src/components/Project/styles.scss
@@ -154,53 +154,40 @@
 	position: absolute;
 	right: 20px;
 	top: 20px;
-	width: 20px;
-	height: 20px;
+	width: 50px;
+	height: 50px;
 	opacity: 0.7;
 	cursor: pointer;
 	z-index: 25;
-	padding: 40px;
-	margin: -40px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	span {
+		box-shadow: 7px 1px 20px rgba(0, 0, 0, 0.2);
+		position: absolute;
+		border-radius: 5px;
+		width: 30px;
+		background-color: black;
+		height: 3px;
+		&:nth-child(1) {
+			transform: rotate(45deg);
+		}
+		&:nth-child(2) {
+			transform: rotate(-45deg);
+		}
+	}
 
 	&:hover {
 		opacity: 1;
-	}
-	&:before,
-	&:after {
-		position: absolute;
-		left: 15px;
-		content: " ";
-		height: 20px;
-		width: 2px;
-		background-color: white;
-		box-shadow: 7px 1px 20px rgba(0, 0, 0, 0.2);
-	}
-	&:before {
-		transform: rotate(45deg);
-	}
-	&:after {
-		transform: rotate(-45deg);
 	}
 }
 
 .left-arrow {
 	left: 0;
-	@media (max-width: 768px) {
-		svg {
-			left: 5px;
-			transform: rotate(90deg);
-		}
-	}
 }
 .right-arrow {
 	right: 0;
-
-	@media (max-width: 768px) {
-		svg {
-			right: 5px;
-			transform: rotate(270deg);
-		}
-	}
 }
 .arrow__container {
 	height: 100vh;
@@ -208,20 +195,9 @@
 	position: absolute;
 	top: 0;
 	cursor: none;
-	svg {
-		display: none;
-	}
+
 	@media (max-width: 768px) {
 		cursor: auto;
-		svg {
-			top: calc(50% - 50px);
-			display: block;
-			z-index: 999;
-			width: 30px;
-			height: 30px;
-			position: absolute;
-			background-color: red;
-		}
 	}
 }
 
@@ -340,3 +316,39 @@ iframe {
 // 		width: 50%;
 // 	}
 // }
+
+.test {
+	position: relative;
+	background-color: blue;
+	width: 50px;
+	height: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.test .chevron {
+	position: absolute;
+	width: 25px;
+	height: 3px;
+	background-color: black;
+}
+
+.test .chevron:nth-child(1) {
+	margin-top: -3px;
+	transform-origin: left center;
+	transform: rotate(35deg);
+	border-radius: 5px;
+}
+
+.test .chevron:nth-child(2) {
+	transform-origin: left center;
+	transform: rotate(-35deg);
+
+	border-radius: 5px;
+}
+
+// <div class="test">
+// <span class="chevron"></span>
+// <span class="chevron"></span>
+// </div>
